# lbm-graphcore

./: .gitignore  CMakeLists.txt  Makefile  README.md  lbm.cpp  package-up-report.sh  play.cpp
experiments/effect-of-mem-on-convolution/: description.md  results.csv  run.sh
experiments/gaussian-blur-scaling/: exchange-vs-compute.csv  exchange-vs-compute.txt  raw_results.txt  results.csv  run.sh  weak-scaling-results.csv  weak-scaling.sh
experiments/halo-exchange-approaches/: description.md  results.csv  results.txt
experiments/min-partition-size/: description.md  output.txt  results.csv
experiments/should-i-use-all-ipus/: description.md  output.txt  results.csv
experiments/waste-by-grid-shape/: description.md  mapping-efficiency.csv  mapping-efficiency16.csv  plots.ipnyb  sampling-results.csv
main/: CMakeLists.txt  CpuLbm.cpp  CpuStencil.cpp  D2Q9Codelets.cpp  DoubleRoll.hpp  GaussianBlurLowLevel.cpp  GraphcoreUtils.hpp  HaloRegionApproaches.cpp  HaloRegionApproachesCodelets.cpp  LastChance.cpp  LatticeBoltzmann.hpp  LbmAoS.cpp  LbmCpu.cpp  LbmLowLevel.cpp  LbmLowLevelOptimised.cpp  LbmParams.hpp  LbmPoplibs.cpp  LbmRunner.cpp  LbmSimple.cpp  LowLevelStencil.cpp  LowLevelStencilInPlace.cpp  PoplibsStencil.cpp  StencilCodelet.cpp  StencilUtils.hpp  StructuredGridUtils.hpp  TileMappingStats.cpp  VisualiseTileMapping.cpp  lbm.cpp  lbm_with_kernels.cpp  stencil.cpp
main/codelets/: D2Q9Codelets.cpp  D2Q9CodeletsOptimised.cpp  GaussianBlurCodelets.cpp  GaussianBlurCodeletsVectorised.cpp  HaloRegionApproachesCodelets.cpp  InPlaceScheme.cpp  StencilCodelet.cpp
main/include/: LatticeBoltzmannUtils.hpp  LbmParams.hpp  StructuredGridUtils.hpp
test/: CMakeLists.txt
test/codelets/: CMakeLists.txt  main.cpp
test/lbm/: CMakeLists.txt  main.cpp
